Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28902

QMAKE_PRL_LIBS in .prl files has -L path of build tree instead of install tree

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.2
    • 5.0.0
    • Build tools: qmake
    • None
    • 6d90c2e9cbfeeb560ffaeed94d908997f90d0877 2be4d6ba022e1349b1b231ae852235f557c6fc20

      Building for mingw with -prefix. Strong hunch that this -L path is intended to locate the Qt libs themselves. Qt5Core.prl itself does not have this -L path (or any other).

      Problem affects qtbase as well as other modules, so I suspect qmake. Affects both the lib and plugins directories.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mabrand Mark Brand
            mabrand Mark Brand
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes